# rba-doc-intel

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LEARN.md  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
app/: config.py
app/db/: models.py  session.py
app/embeddings/: client.py  indexer.py
app/pdf/: chart_extractor.py  chunker.py  cleaner.py  parser.py  table_extractor.py
app/rag/: eval.py  hooks.py  llm_client.py  pipeline.py  reranker.py  retriever.py  safety.py
app/storage/: __init__.py  base.py  minio_s3.py
app/ui/: streamlit_app.py
docker/embedding/: Dockerfile  app.py  requirements.txt
docker/postgres/initdb.d/: 00_init.sql  01_create_tables.sql  01_test_schema.sql  02_create_indexes.sql  02_seed_eval_examples.sql  04_add_chunk_table_link.sql  05_rebuild_chunk_index.sql  06_add_charts_table.sql
docs/: ARCHITECTURE_DECISIONS.md  CODEBASE_STRUCTURE.md  COMPLETE_PDF_RAG_INTERVIEW_GUIDE.md  EMBEDDING_SERVICE_ARCHITECTURE.md  EXPLORATION_SUMMARY.md  FAST_EMBEDDING_SOLUTION.md  IMPROVEMENTS_SUMMARY.md  PARALLEL_PROCESSING.md  QUICK_REFERENCE.md  README.md  TABLE_CLEANING.md  TABLE_VERIFICATION.md  TESTING.md
docs/archive/: COMPLETE_PDF_RAG_INTERVIEW_GUIDE.md  EXPLORATION_SUMMARY.md
scripts/: __init__.py  bootstrap_db.py  build_embeddings.py  crawler_rba.py  debug_dump.py  debug_retrieval.py  export_feedback_pairs.py  extract_tables.py  finetune_dpo.py  finetune_lora.py  finetune_lora_dpo.py  finetune_simple.py  ingest_documents.py  process_pdfs.py  refresh_pdfs.py  run_embedding_local_m4.sh  run_eval.py  test_workflow.py  verify_table_extraction.py  wait_for_services.py
tests/pdf/: test_chunker.py  test_cleaner.py
tests/rag/: test_hooks.py  test_pipeline.py
tests/ui/: test_feedback.py
