[project]
name = "rba-document-intelligence"
version = "0.1.0"
description = "RBA Document Intelligence Platform"
requires-python = ">=3.11"
authors = [{ name = "RBA Agents" }]
dependencies = [
    "sqlalchemy>=2.0.25",
    "pgvector>=0.2.4",
    "psycopg[binary]>=3.1.17",
    "minio>=7.2.4",
    "boto3>=1.34.40",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "pymupdf>=1.23.9",
    "streamlit>=1.32.0",
    "pytest>=7.4.4",
    "python-dateutil>=2.8.2",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0.6",
    "types-beautifulsoup4>=4.12.0.7",
]

[tool.ruff]
line-length = 100
src = ["app", "scripts", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
packages = ["app"]
ignore_missing_imports = true
