[project]
name = "rba-document-intelligence"
version = "0.1.0"
description = "RBA Document Intelligence Platform"
requires-python = ">=3.11"
authors = [{ name = "RBA Agents" }]
dependencies = [
    "sqlalchemy>=2.0.25",
    "pgvector>=0.2.4",
    "psycopg[binary]>=3.1.17",
    "minio>=7.2.4",
    "boto3>=1.34.40",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "pymupdf>=1.23.9",
    "streamlit>=1.32.0",
    "pytest>=7.4.4",
    "python-dateutil>=2.8.2",
    "tenacity>=8.2.3",
    # ML & Quality improvements
    "camelot-py>=0.11.0",  # Table extraction from PDFs
    "ghostscript>=0.7",
    "opencv-python-headless>=4.10.0",  # Image processing for chart detection
    "sentence-transformers>=2.3.0",  # Cross-encoder for reranking
    "tiktoken>=0.5.1",  # Token counting for context window validation
    # Fine-tuning dependencies (local M4 MacBook Pro)
    "torch>=2.1.0",  # PyTorch with MPS support (Metal Performance Shaders)
    "transformers>=4.36.0",  # Hugging Face transformers for model loading
    "peft>=0.7.0",  # Parameter-Efficient Fine-Tuning (LoRA, QLoRA)
    "trl>=0.7.0",  # Transformer Reinforcement Learning (DPO trainer)
    "datasets>=2.16.0",  # Hugging Face datasets
    "accelerate>=0.25.0",  # Distributed training utilities
    # bitsandbytes>=0.42.0  # 4-bit quantization (NOT supported on MPS yet)
    #                       # Uncomment when training on NVIDIA GPU (cloud)
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0.6",
    "types-beautifulsoup4>=4.12.0.7",
]

[tool.ruff]
line-length = 100
src = ["app", "scripts", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
packages = ["app"]
ignore_missing_imports = true
